exception handling, rethrow example

--- a/exceptionHandling/CMakeLists.txt
+++ b/exceptionHandling/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 add_executable(throwOnlyTerminate throwOnlyTerminate.cpp)
 add_executable(basics basics.cpp)
 add_executable(stackUnwinding stackUnwinding.cpp)
+add_executable(rethrow rethrow.cpp)
 
 
 
