--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(polymorphicClass VERSION 1.0)
+project(template VERSION 1.0)
 
 
 set(CMAKE_CXX_STANDARD 20)
@@ -8,4 +8,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 
 add_executable(typeTeller_target typeTeller.cpp)
+add_executable(typeDeduction_target typeDeduction.cpp)
 
