--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -12,3 +12,6 @@ add_executable(typeDeduction_target typeDeduction.cpp)
 add_executable(SFINAE_target SFINAE.cpp)
 add_executable(template_n_range_target template_n_range.cpp)
 add_executable(perfectForwarding_target perfectForwarding.cpp)
+add_executable(explicitSpecialization_target explicitSpecialization.cpp)
+
+
