template partial specialization examples.

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -13,5 +13,5 @@ add_executable(SFINAE_target SFINAE.cpp)
 add_executable(template_n_range_target template_n_range.cpp)
 add_executable(perfectForwarding_target perfectForwarding.cpp)
 add_executable(explicitSpecialization_target explicitSpecialization.cpp)
-
+add_executable(partialSpecialization_target partialSpecialization.cpp)
 
