alias template examples

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -14,4 +14,5 @@ add_executable(template_n_range_target template_n_range.cpp)
 add_executable(perfectForwarding_target perfectForwarding.cpp)
 add_executable(explicitSpecialization_target explicitSpecialization.cpp)
 add_executable(partialSpecialization_target partialSpecialization.cpp)
+add_executable(aliasTemplate_target aliasTemplate.cpp)
 
