variadic template examples, including nice cout binary fold

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -16,4 +16,5 @@ add_executable(explicitSpecialization_target explicitSpecialization.cpp)
 add_executable(partialSpecialization_target partialSpecialization.cpp)
 add_executable(aliasTemplate_target aliasTemplate.cpp)
 add_executable(variableTemplate_target variableTemplate.cpp)
+add_executable(variadicTemplates_target variadicTemplates.cpp)
 
