--- a/stl/iterators/CMakeLists.txt
+++ b/stl/iterators/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(iteratorCategories_target iteratorCategories.cpp)
 add_executable(algorithms_target algorithms.cpp)
+add_executable(constant_iterator_target constant_iterator.cpp)
