--- a/stl/iterators/CMakeLists.txt
+++ b/stl/iterators/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(iteratorCategories_target iteratorCategories.cpp)
 add_executable(algorithms_target algorithms.cpp)
 add_executable(constant_iterator_target constant_iterator.cpp)
+add_executable(reverse_iterator_target reverse_iterator.cpp)
