predicate and iterators, count_if, find_if ....

--- a/stl/iterators/CMakeLists.txt
+++ b/stl/iterators/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(iteratorCategories_target iteratorCategories.cpp)
 add_executable(algorithms_target algorithms.cpp)
 add_executable(constant_iterator_target constant_iterator.cpp)
 add_executable(reverse_iterator_target reverse_iterator.cpp)
+add_executable(predicate_and_iterator_target predicate_and_iterator.cpp)
