added functional object examples, also more algorithms

--- a/stl/iterators/CMakeLists.txt
+++ b/stl/iterators/CMakeLists.txt
@@ -10,3 +10,5 @@ add_executable(algorithms_target algorithms.cpp)
 add_executable(constant_iterator_target constant_iterator.cpp)
 add_executable(reverse_iterator_target reverse_iterator.cpp)
 add_executable(predicate_and_iterator_target predicate_and_iterator.cpp)
+add_executable(functional_target functional.cpp)
+
