add vector container iterators

--- a/stl/containers/CMakeLists.txt
+++ b/stl/containers/CMakeLists.txt
@@ -4,5 +4,7 @@ project(containers VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD_REQUIRED 1)
 set(CMAKE_CXX_STANDARD 20)
+
 add_executable(vector_add_element_target vector_add_element.cpp)
+add_executable(vector_iterators_target vector_iterators.cpp)
 add_executable(vector_constructors_target vector_constructors.cpp)
