add vector container other functions
added size, resize, shrink_to_fit, for loop creation, accessing elements

--- a/stl/containers/CMakeLists.txt
+++ b/stl/containers/CMakeLists.txt
@@ -8,3 +8,5 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(vector_add_element_target vector_add_element.cpp)
 add_executable(vector_iterators_target vector_iterators.cpp)
 add_executable(vector_constructors_target vector_constructors.cpp)
+add_executable(vector_other_functions_target vector_other_functions.cpp)
+
