add logger for printing container, basic types, any types supporting ostream operator

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -17,4 +17,6 @@ add_executable(partialSpecialization_target partialSpecialization.cpp)
 add_executable(aliasTemplate_target aliasTemplate.cpp)
 add_executable(variableTemplate_target variableTemplate.cpp)
 add_executable(variadicTemplates_target variadicTemplates.cpp)
+add_executable(logger_target logger.cpp)
+
 
