added vector algorithms
stl algorithms cannot change the size of the container, but there are stl algorithms that does that logically

--- a/stl/containers/CMakeLists.txt
+++ b/stl/containers/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(vector_constructors_target vector_constructors.cpp)
 add_executable(vector_other_functions_target vector_other_functions.cpp)
 add_executable(vector_change_size_target vector_change_size.cpp)
 add_executable(vector_comparison_target vector_comparison.cpp)
+add_executable(vector_algorithms_target vector_algorithms.cpp)
 
