update cpp standard to 20

--- a/staticDataMember/CMakeLists.txt
+++ b/staticDataMember/CMakeLists.txt
@@ -3,5 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project(staticDM VERSION 1.0)
 
 set(source_files main.cpp)
+set(CMAKE_CXX_STANDARD_REQUIRED 1)
+set(CMAKE_CXX_STANDARD 20)
 
 add_executable(${PROJECT_NAME}_target ${source_files})
